// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectField should handle key down event Enter/Tab (existing value) 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "First",
      "text": "first",
      "value": 1,
    },
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
    Object {
      "label": "Third",
      "text": "third",
      "value": 3,
    },
  ],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`MultiSelectField should handle key down event Enter/Tab (existing value) 2`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "First",
      "text": "first",
      "value": 1,
    },
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
    Object {
      "label": "Third",
      "text": "third",
      "value": 3,
    },
  ],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`MultiSelectField should handle key down event Enter/tab (custom value) 1`] = `
Object {
  "filteredOptions": Array [],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": -1,
}
`;

exports[`MultiSelectField should handle key down event Enter/tab (custom value) 2`] = `
Object {
  "filteredOptions": Array [],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": -1,
}
`;

exports[`MultiSelectField should handle key down event Escape 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
  ],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": -1,
}
`;

exports[`MultiSelectField should init state with custom props 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
  ],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": -1,
}
`;

exports[`MultiSelectField should init state with default props 1`] = `
Object {
  "filteredOptions": Array [],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`MultiSelectField should render a multi select input with custom props 1`] = `
<div
  style={null}
>
  <div
    className="undefined"
    onClick={[Function]}
  >
    <Badge
      className="tag"
      color="default"
      pill={false}
      style={
        Object {
          "color": "#0275d8",
          "margin": "0.25em 0",
        }
      }
      tag="span"
    >
      <span>
        First
        <i
          className="fa fa-fw fa-close cursor-pointer ml-1"
          onClick={[Function]}
        />
      </span>
    </Badge>
    <Badge
      className="tag"
      color="default"
      pill={false}
      style={
        Object {
          "color": "#0275d8",
          "margin": "0.25em 0",
        }
      }
      tag="span"
    >
      <span>
        Third
        <i
          className="fa fa-fw fa-close cursor-pointer ml-1"
          onClick={[Function]}
        />
      </span>
    </Badge>
    <div>
      <input
        className="undefined ml-2"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add tags..."
        value=""
      />
      <UncontrolledDropdown
        isOpen={false}
      >
        <DropdownMenu
          tag="div"
        >
          <DropdownItem
            className=""
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            tag="button"
            toggle={true}
            type="button"
          >
            Second
          </DropdownItem>
        </DropdownMenu>
      </UncontrolledDropdown>
    </div>
  </div>
</div>
`;

exports[`MultiSelectField should render a select input with default props 1`] = `
<div
  style={null}
>
  <div
    className="undefined"
    onClick={[Function]}
  >
    <div>
      <input
        className="undefined ml-2"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add items..."
        value=""
      />
      <UncontrolledDropdown
        isOpen={false}
      >
        <DropdownMenu
          tag="div"
        >
          <DropdownItem
            header={true}
            tag="button"
            toggle={true}
          >
            No result
          </DropdownItem>
        </DropdownMenu>
      </UncontrolledDropdown>
    </div>
  </div>
</div>
`;

exports[`MultiSelectField should reset state on blur 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
  ],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": -1,
}
`;

exports[`MultiSelectField should update state when search changes (custom NOT values allowed) 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Hello",
      "value": "hello",
    },
  ],
  "input": "hello",
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`MultiSelectField should update state when search changes (custom NOT values allowed) 2`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Hello",
      "value": "hello",
    },
    Object {
      "label": "World",
      "value": "world",
    },
  ],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`MultiSelectField should update state when search changes (custom values allowed) 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Hello",
      "value": "hello",
    },
  ],
  "input": "hello",
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`MultiSelectField should update state when search changes (custom values allowed) 2`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Hello",
      "value": "hello",
    },
    Object {
      "label": "World",
      "value": "world",
    },
  ],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`MultiSelectField should use custom props 1`] = `
Object {
  "allowCustomValues": true,
  "onChange": [Function],
  "options": Array [
    Object {
      "label": "First",
      "text": "first",
      "value": 1,
    },
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
    Object {
      "label": "Third",
      "text": "third",
      "value": 3,
    },
  ],
  "plural": "tags",
  "singular": "tag",
  "style": null,
  "tagColor": "#0275d8",
  "values": Array [
    1,
    3,
  ],
}
`;

exports[`MultiSelectField should use default props 1`] = `
Object {
  "allowCustomValues": false,
  "onChange": [Function],
  "options": Array [],
  "plural": "items",
  "singular": "item",
  "style": null,
  "tagColor": "#0275d8",
  "values": Array [],
}
`;
